@@ -107,14 +107,34 @@ class Realtime(Overlay):
                 targets=self.bars_tcmpd,
             )
 
+        # Last data
+        self.last_in_pits = -1
+        self.last_tcmpd_f = ""
+        self.last_tcmpd_r = ""
+
     def timerEvent(self, event):
         """Update when vehicle on track"""
-        # Tyre compound
-        if self.wcfg["show_tyre_compound"]:
+        # Update compound while in pit (or switched pit state)
+        in_pits = api.read.vehicle.in_pits()
+        if in_pits or self.last_in_pits != in_pits:
+            self.last_in_pits = in_pits
             class_name = api.read.vehicle.class_name()
-            tcmpd_name = api.read.tyre.compound_name()
-            for cmpd_idx, bar_tcmpd in enumerate(self.bars_tcmpd):
-                self.update_tcmpd(bar_tcmpd, f"{class_name} - {tcmpd_name[cmpd_idx]}", cmpd_idx * 2)
+            tcmpd_f = f"{class_name} - {api.read.tyre.compound_name_front()}"
+            tcmpd_r = f"{class_name} - {api.read.tyre.compound_name_rear()}"
+
+            # Heatmap style
+            if self.wcfg["enable_heatmap_auto_matching"]:
+                if self.last_tcmpd_f != tcmpd_f:
+                    self.update_heatmap(tcmpd_f, 0)
+                    self.last_tcmpd_f = tcmpd_f
+                if self.last_tcmpd_r != tcmpd_r:
+                    self.update_heatmap(tcmpd_r, 2)
+                    self.last_tcmpd_r = tcmpd_r
+
+            # Tyre compound
+            if self.wcfg["show_tyre_compound"]:
+                self.update_tcmpd(self.bars_tcmpd[0], tcmpd_f)
+                self.update_tcmpd(self.bars_tcmpd[1], tcmpd_r)
 
         # Inner layer temperature: 0 - fl, 3 - fr, 6 - rl, 9 - rr
         if self.wcfg["show_inner_center_outer"]:
@@ -137,22 +157,23 @@ class Realtime(Overlay):
                 target.setText(f"{self.unit_temp(data):0{self.leading_zero}f}{self.sign_text}")
             target.updateStyle(calc.select_grade(self.heatmap_styles[index], data))
 
-    def update_tcmpd(self, target, data, index):
+    def update_tcmpd(self, target, data):
         """Tyre compound"""
         if target.last != data:
             target.last = data
             target.setText(select_compound_symbol(data))
-            # Update heatmap style
-            if self.wcfg["enable_heatmap_auto_matching"]:
-                heatmap_style = load_heatmap_style(
-                    heatmap_name=select_tyre_heatmap_name(data),
-                    default_name=HEATMAP_DEFAULT_TYRE,
-                    swap_style=self.wcfg["swap_style"],
-                    fg_color=self.wcfg["font_color_inner_layer"],
-                    bg_color=self.wcfg["bkg_color_inner_layer"],
-                )
-                self.heatmap_styles[index] = heatmap_style
-                self.heatmap_styles[index + 1] = heatmap_style
+
+    def update_heatmap(self, compound, index):
+        """Heatmap style"""
+        heatmap_style = load_heatmap_style(
+            heatmap_name=select_tyre_heatmap_name(compound),
+            default_name=HEATMAP_DEFAULT_TYRE,
+            swap_style=self.wcfg["swap_style"],
+            fg_color=self.wcfg["font_color_inner_layer"],
+            bg_color=self.wcfg["bkg_color_inner_layer"],
+        )
+        self.heatmap_styles[index] = heatmap_style
+        self.heatmap_styles[index + 1] = heatmap_style
 
     # GUI generate methods
     def set_table(self, text, style, width, layout, inner_gap):
